--- a/css/style.css
+++ b/css/style.css
@@ -26,13 +26,13 @@
   width:100%;
   height:100%;
 }
-.production {
+.producer {
   display: block;
   width:100%;
   background-color: cyan; 
   height:50px;
 }
-.production > span {
+.producer > span {
   display: inline;
   cursor: pointer;
   padding: 10px;
@@ -44,4 +44,13 @@
   background-color: red;
   width:100px;
   height:50px;
+}
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
 }
