--- a/css/style.css
+++ b/css/style.css
@@ -54,3 +54,9 @@
             user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome and Opera */
 }
+
+#buy-sell-mode {
+  display: flex;
+  justify-content: space-between;
+  padding: 1em;
+}
