--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 #container{
   display: flex;
   flex-wrap: nowrap ;
-  background-color: green;
 }
 #left, #right, #bottom {
   display: flex;
@@ -14,28 +13,86 @@
   flex-direction: column;
 }
 #left-separator, #right-seperator {
-  background-color: black;
   width:1%;
-  height:100%;
+  height:auto;
+  background: url('images/column.png') repeat;  
+}
+@keyframes enlarge {
+  0%   {transform:scale(1)}
+  20%   {transform:scale(1.05)}
+  40%   {transform:scale(1.08)}
+  60%   {transform:scale(1.04)}
+  80%   {transform:scale(1)}
+  100%   {transform:scale(1.05)}
 }
 #big-cookie-container {
+  position: relative;
   width: 100%;
   padding: 10%;
 }
 #big-cookie {
-  width:100%;
-  height:100%;
+  position: absolute;
+  top: 6em;
+  left: 7em;
+  width: 235px;
+  height: 41%;
+  background: url('images/cookie.png') no-repeat;  
+  background-size: 235px;
+  background-color: red;
+  border-radius: 127px;
+  cursor: pointer;
+}
+#big-cookie:hover {
+  animation-name: enlarge;
+  animation-duration: .3s;
+  transform: scale(1.05);
 }
 .producer {
-  display: block;
+  display: flex;
+  position: relative;
   width:100%;
-  background-color: cyan; 
+  background: url('images/frameProducer.jpg') no-repeat center;
+  background-size:100%;
+  padding: 21px 0;
   height:50px;
+  cursor: pointer;
 }
 .producer > span {
-  display: inline;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
   cursor: pointer;
-  padding: 10px;
+  padding: 1px;
+}
+.producer:hover {
+  box-shadow: 0px 0px 16px #fff inset, 0px 0px 1px #000;
+}
+.name {
+  position: absolute;
+  top:1em;
+  left:10em;
+  background: url('images/cursor.png') no-repeat center;
+  background-size:100%;
+}
+.price {
+  position: absolute;
+  top:1em;
+  left:20em;
+}
+.owned {
+  position: absolute;
+  top:1em;
+  right:1em;
+}
+.produced {
+  position: absolute;
+  top:2em;
+  left:1em;
+}
+.per-sec {
+  position: absolute;
+  top:1em;
+  left:3em;
 }
 .active {
   font-weight: bold;
@@ -58,5 +115,30 @@
 #buy-sell-mode {
   display: flex;
   justify-content: space-between;
-  padding: 1em;
+  align-items: center;
+  padding: 0 1em;
+}
+.buy-sell-con {
+  display: inline-block;
+}
+#buy, #sell {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0.5em;
+  top: 0px;
+  left: 0px;
+  width: 47px;
+  height: 20px;
+  background-color: red;
+  cursor: pointer;
+}
+#store1, #store10, #store100 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height:30px;
+  background-color: red;
+  cursor: pointer;
 }
